[gd_scene load_steps=6 format=2]

[ext_resource path="res://ball.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites.png" type="Texture" id=2]
[ext_resource path="res://bouncy_bouncy.tres" type="PhysicsMaterial" id=3]
[ext_resource path="res://assets/siclone_menu.wav" type="AudioStream" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 5.0

[node name="ball" type="RigidBody2D" groups=["ball"]]
rotation = 8.14682e-05
mode = 2
physics_material_override = ExtResource( 3 )
gravity_scale = 0.0
contacts_reported = 4
contact_monitor = true
linear_damp = 0.0
angular_damp = 0.0
script = ExtResource( 1 )

[node name="sprite_right" type="Sprite" parent="."]
position = Vector2( -3, 0 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 41.1, 3.0365, 24.0202, 15.6906 )

[node name="sprite_left" type="Sprite" parent="."]
visible = false
position = Vector2( 5, -0.000411987 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 41.2926, 24.7846, 22.8616, 14.7451 )

[node name="shape" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="paddle_colission_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[connection signal="body_entered" from="." to="." method="_on_ball_body_entered"]
